refer/v20250305/pion_3pt/beta6.20_mu-0.2770_ms-0.2400_L24x72/ssub.err
Traceback (most recent call last):
  File "./main.py", line 1, in <module>
    from creat_chroma import *
  File "/public/home/zhangxin/lattice-qcd/pion_3pt/beta6.20_mu-0.2770_ms-0.2400_L24x72/creat_chroma.py", line 5
    lattice_size: list[int],
                ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "./main.py", line 1, in <module>
    from creat_chroma import *
  File "/public/home/zhangxin/lattice-qcd/pion_3pt/beta6.20_mu-0.2770_ms-0.2400_L24x72/creat_chroma.py", line 5
    lattice_size: list[int],
                ^
SyntaxError: invalid syntax
